# mito_check

./: .gitignore  Cargo.toml
script/: alntv_prepare.sh  check_mutations.sh  compare_two_strain.sh  create_alitv_yaml.sh  find_svs.sh  pipeline.sh  plot_coverages.R  plots.R  repetitive_analysis.sh  summarize_genome.sh  var_check.R
src/: lib.rs
