[package]
name = "mito_check"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.0.17", features = ["derive"]}
bio_utils = {git = "https://github.com/ban-m/bio_utils.git", branch = "master"}